--- a/default/data/ui/views/collection_changes.xml
+++ b/default/data/ui/views/collection_changes.xml
@@ -11,15 +11,22 @@
       <choice value="*">_ALL</choice>
       <default>*</default>
     </input>
+    <input type="time" token="timepicker">
+      <label></label>
+      <default>
+        <earliest>@w0</earliest>
+        <latest>now</latest>
+      </default>
+    </input>
   </fieldset>
   <row>
     <panel>
       <table>
-        <title>changes</title>
+        <title>All Collection Changes</title>
         <search>
-          <query>eventtype="sccm_change_audit" collectionid!=null collectionid=$collectionid$ | `sccm_lookup_status_message_desc` | table _time, username, description</query>
-          <earliest>0</earliest>
-          <latest></latest>
+          <query>eventtype="sccm_change_audit" collectionid!=null collectionid=$collectionid$ | `sccm_lookup_status_message_desc` | table _time, username, description | rename _time as Time, username as User, description as Description | convert ctime(Time)</query>
+          <earliest>$timepicker.earliest$</earliest>
+          <latest>$timepicker.latest$</latest>
         </search>
         <option name="wrap">undefined</option>
         <option name="rowNumbers">undefined</option>
