--- a/default/data/ui/views/package_changes.xml
+++ b/default/data/ui/views/package_changes.xml
@@ -1,18 +1,29 @@
-<dashboard>
+<form>
   <label>Package Changes</label>
+  <fieldset submitButton="false">
+    <input type="time" token="timepicker">
+      <label></label>
+      <default>
+        <earliest>@w0</earliest>
+        <latest>now</latest>
+      </default>
+    </input>
+  </fieldset>
   <row>
     <panel>
       <table>
-        <title>changes</title>
+        <title>All Package Changes</title>
         <search>
-          <query>eventtype="sccm_change_audit" packageid!=null | `sccm_lookup_status_message_desc` | table _time, username, description</query>
-          <earliest>0</earliest>
-          <latest></latest>
+          <query>eventtype="sccm_change_audit" packageid!=null | `sccm_lookup_status_message_desc` | table _time, username, description | rename _time as Time, username as User, description as Description | convert ctime(Time)</query>
+          <earliest>$field1.earliest$</earliest>
+          <latest>$field1.latest$</latest>
         </search>
         <option name="wrap">undefined</option>
         <option name="rowNumbers">undefined</option>
         <option name="drilldown">row</option>
+        <option name="dataOverlayMode">none</option>
+        <option name="count">10</option>
       </table>
     </panel>
   </row>
-</dashboard>
+</form>
